# hv-tutorial

./: .buildinfo  .gitignore  .pre-commit-config.yaml  00_Setup.html  01_Overview.html  04_Interlinked_Plots.html  05_Interactive_Pipelines.html  06_Dashboards.html  07_Custom_Interactivity.html  08_Custom_Dashboards.html  README.md  contributing.html  genindex.html  index.html  objects.inv  pixi.toml  pyproject.toml  search.html  searchindex.js
.doctrees/: 00_Setup.doctree  01_Overview.doctree  04_Interlinked_Plots.doctree  05_Interactive_Pipelines.doctree  07_Custom_Interactivity.doctree  08_Custom_Dashboards.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/exercises/: Advanced_Dashboarding.doctree  Building_Pipelines.doctree  (+3 more)
_sources/: 00_Setup.ipynb  01_Overview.ipynb  02_Plotting.ipynb  04_Interlinked_Plots.ipynb  06_Dashboards.ipynb  07_Custom_Interactivity.ipynb  08_Custom_Dashboards.ipynb  09_Advanced_Dashboards.ipynb  contributing.md  index.ipynb
_static/: documentation_options.js
binder/: environment.yml  postBuild  requirements.txt
exercises/: Advanced_Dashboarding.html  Building_Pipelines.html  Building_a_Dashboard.html  Linking_Plots.html  Plotting.html
scripts/: archive.py
tutorial/: 00_Setup.ipynb  02_Plotting.ipynb  03_Composing_Plots.ipynb  04_Interlinked_Plots.ipynb  05_Interactive_Pipelines.ipynb  06_Dashboards.ipynb  07_Custom_Interactivity.ipynb  08_Custom_Dashboards.ipynb  09_Advanced_Dashboards.ipynb  09_Advanced_Dashboards.py  conf.py  data_checker.py  download_data.py  index.ipynb  package_checker.py
(+10 files in other folders)
